ParEmm.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParEmm.y
-----------------------------------------------------------------------------

state 126 contains 1 shift/reduce conflicts.

rule 44 is unused
rule 45 is unused
rule 46 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Decl                                     (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Decl -> Type ListItem ';'                          (8)
	Decl -> Type Ident '(' ListArg ')' Block           (9)
	Arg -> Type Ident                                  (10)
	Arg -> Type '&' Ident                              (11)
	ListArg ->                                         (12)
	ListArg -> Arg                                     (13)
	ListArg -> Arg ',' ListArg                         (14)
	Item -> Ident                                      (15)
	Item -> Ident '=' Expr                             (16)
	Item -> Ident '[' Expr ']'                         (17)
	ListItem -> Item                                   (18)
	ListItem -> Item ',' ListItem                      (19)
	Block -> '{' ListStmt '}'                          (20)
	ListStmt ->                                        (21)
	ListStmt -> Stmt ListStmt                          (22)
	Stmt -> ';'                                        (23)
	Stmt -> Block                                      (24)
	Stmt -> Decl                                       (25)
	Stmt -> Ident '=' Expr ';'                         (26)
	Stmt -> Ident '[' Expr ']' '=' Expr ';'            (27)
	Stmt -> Ident '++' ';'                             (28)
	Stmt -> Ident '[' Expr ']' '++' ';'                (29)
	Stmt -> Ident '--' ';'                             (30)
	Stmt -> Ident '[' Expr ']' '--' ';'                (31)
	Stmt -> 'return' Expr ';'                          (32)
	Stmt -> 'return' ';'                               (33)
	Stmt -> 'if' '(' Expr ')' Stmt                     (34)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (35)
	Stmt -> 'while' '(' Expr ')' Stmt                  (36)
	Stmt -> 'break' ';'                                (37)
	Stmt -> 'continue' ';'                             (38)
	Stmt -> Expr ';'                                   (39)
	Type -> 'int'                                      (40)
	Type -> 'string'                                   (41)
	Type -> 'bool'                                     (42)
	Type -> 'void'                                     (43)
	ListType ->                                        (44)
	ListType -> Type                                   (45)
	ListType -> Type ',' ListType                      (46)
	Expr6 -> Ident '[' Expr ']'                        (47)
	Expr6 -> Ident                                     (48)
	Expr6 -> Integer                                   (49)
	Expr6 -> 'true'                                    (50)
	Expr6 -> 'false'                                   (51)
	Expr6 -> Ident '(' ListExpr ')'                    (52)
	Expr6 -> String                                    (53)
	Expr6 -> '(' Expr ')'                              (54)
	Expr5 -> '-' Expr6                                 (55)
	Expr5 -> '!' Expr6                                 (56)
	Expr5 -> Expr6                                     (57)
	Expr4 -> Expr4 MulOp Expr5                         (58)
	Expr4 -> Expr5                                     (59)
	Expr3 -> Expr3 AddOp Expr4                         (60)
	Expr3 -> Expr4                                     (61)
	Expr2 -> Expr2 RelOp Expr3                         (62)
	Expr2 -> Expr3                                     (63)
	Expr1 -> Expr2 '&&' Expr1                          (64)
	Expr1 -> Expr2                                     (65)
	Expr -> Expr1 '||' Expr                            (66)
	Expr -> Expr1                                      (67)
	ListExpr ->                                        (68)
	ListExpr -> Expr                                   (69)
	ListExpr -> Expr ',' ListExpr                      (70)
	AddOp -> '+'                                       (71)
	AddOp -> '-'                                       (72)
	MulOp -> '*'                                       (73)
	MulOp -> '/'                                       (74)
	MulOp -> '%'                                       (75)
	RelOp -> '<'                                       (76)
	RelOp -> '<='                                      (77)
	RelOp -> '>'                                       (78)
	RelOp -> '>='                                      (79)
	RelOp -> '=='                                      (80)
	RelOp -> '!='                                      (81)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'break'        { PT _ (TS _ 25) }
	'continue'     { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'int'          { PT _ (TS _ 30) }
	'return'       { PT _ (TS _ 31) }
	'string'       { PT _ (TS _ 32) }
	'true'         { PT _ (TS _ 33) }
	'void'         { PT _ (TS _ 34) }
	'while'        { PT _ (TS _ 35) }
	'{'            { PT _ (TS _ 36) }
	'||'           { PT _ (TS _ 37) }
	'}'            { PT _ (TS _ 38) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Decl            rules 8, 9
	Arg             rules 10, 11
	ListArg         rules 12, 13, 14
	Item            rules 15, 16, 17
	ListItem        rules 18, 19
	Block           rule  20
	ListStmt        rules 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	Type            rules 40, 41, 42, 43
	ListType        rules 44, 45, 46
	Expr6           rules 47, 48, 49, 50, 51, 52, 53, 54
	Expr5           rules 55, 56, 57
	Expr4           rules 58, 59
	Expr3           rules 60, 61
	Expr2           rules 62, 63
	Expr1           rules 64, 65
	Expr            rules 66, 67
	ListExpr        rules 68, 69, 70
	AddOp           rules 71, 72
	MulOp           rules 73, 74, 75
	RelOp           rules 76, 77, 78, 79, 80, 81

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Decl           goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 15
	Decl           goto state 6
	Type           goto state 7

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Decl .                                    (rule 5)

	'bool'         reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 7

	Decl -> Type . ListItem ';'                         (rule 8)
	Decl -> Type . Ident '(' ListArg ')' Block          (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 12
	Item           goto state 13
	ListItem       goto state 14

State 8

	Type -> 'bool' .                                    (rule 42)

	'&'            reduce using rule 42
	L_Ident        reduce using rule 42


State 9

	Type -> 'int' .                                     (rule 40)

	'&'            reduce using rule 40
	L_Ident        reduce using rule 40


State 10

	Type -> 'string' .                                  (rule 41)

	'&'            reduce using rule 41
	L_Ident        reduce using rule 41


State 11

	Type -> 'void' .                                    (rule 43)

	'&'            reduce using rule 43
	L_Ident        reduce using rule 43


State 12

	Decl -> Type Ident . '(' ListArg ')' Block          (rule 9)
	Item -> Ident .                                     (rule 15)
	Item -> Ident . '=' Expr                            (rule 16)
	Item -> Ident . '[' Expr ']'                        (rule 17)

	'('            shift, and enter state 18
	','            reduce using rule 15
	';'            reduce using rule 15
	'='            shift, and enter state 19
	'['            shift, and enter state 20


State 13

	ListItem -> Item .                                  (rule 18)
	ListItem -> Item . ',' ListItem                     (rule 19)

	','            shift, and enter state 17
	';'            reduce using rule 18


State 14

	Decl -> Type ListItem . ';'                         (rule 8)

	';'            shift, and enter state 16


State 15

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 16

	Decl -> Type ListItem ';' .                         (rule 8)

	'!'            reduce using rule 8
	'('            reduce using rule 8
	'-'            reduce using rule 8
	';'            reduce using rule 8
	'bool'         reduce using rule 8
	'break'        reduce using rule 8
	'continue'     reduce using rule 8
	'else'         reduce using rule 8
	'false'        reduce using rule 8
	'if'           reduce using rule 8
	'int'          reduce using rule 8
	'return'       reduce using rule 8
	'string'       reduce using rule 8
	'true'         reduce using rule 8
	'void'         reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_Ident        reduce using rule 8
	L_integ        reduce using rule 8
	L_quoted       reduce using rule 8
	%eof           reduce using rule 8


State 17

	ListItem -> Item ',' . ListItem                     (rule 19)

	L_Ident        shift, and enter state 2

	Ident          goto state 42
	Item           goto state 13
	ListItem       goto state 43

State 18

	Decl -> Type Ident '(' . ListArg ')' Block          (rule 9)

	')'            reduce using rule 12
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 39
	ListArg        goto state 40
	Type           goto state 41

State 19

	Item -> Ident '=' . Expr                            (rule 16)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'-'            shift, and enter state 33
	'false'        shift, and enter state 34
	'true'         shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 24
	Expr5          goto state 25
	Expr4          goto state 26
	Expr3          goto state 27
	Expr2          goto state 28
	Expr1          goto state 29
	Expr           goto state 38

State 20

	Item -> Ident '[' . Expr ']'                        (rule 17)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'-'            shift, and enter state 33
	'false'        shift, and enter state 34
	'true'         shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 24
	Expr5          goto state 25
	Expr4          goto state 26
	Expr3          goto state 27
	Expr2          goto state 28
	Expr1          goto state 29
	Expr           goto state 30

State 21

	Expr6 -> Ident . '[' Expr ']'                       (rule 47)
	Expr6 -> Ident .                                    (rule 48)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 52)

	'!='           reduce using rule 48
	'%'            reduce using rule 48
	'&&'           reduce using rule 48
	'('            shift, and enter state 68
	')'            reduce using rule 48
	'*'            reduce using rule 48
	'+'            reduce using rule 48
	','            reduce using rule 48
	'-'            reduce using rule 48
	'/'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'=='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'['            shift, and enter state 69
	']'            reduce using rule 48
	'||'           reduce using rule 48


State 22

	Expr6 -> Integer .                                  (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'||'           reduce using rule 49


State 23

	Expr6 -> String .                                   (rule 53)

	'!='           reduce using rule 53
	'%'            reduce using rule 53
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            reduce using rule 53
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	']'            reduce using rule 53
	'||'           reduce using rule 53


State 24

	Expr5 -> Expr6 .                                    (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'||'           reduce using rule 57


State 25

	Expr4 -> Expr5 .                                    (rule 59)

	'!='           reduce using rule 59
	'%'            reduce using rule 59
	'&&'           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'/'            reduce using rule 59
	';'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'=='           reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	']'            reduce using rule 59
	'||'           reduce using rule 59


State 26

	Expr4 -> Expr4 . MulOp Expr5                        (rule 58)
	Expr3 -> Expr4 .                                    (rule 61)

	'!='           reduce using rule 61
	'%'            shift, and enter state 65
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            shift, and enter state 66
	'+'            reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'/'            shift, and enter state 67
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	']'            reduce using rule 61
	'||'           reduce using rule 61

	MulOp          goto state 64

State 27

	Expr3 -> Expr3 . AddOp Expr4                        (rule 60)
	Expr2 -> Expr3 .                                    (rule 63)

	'!='           reduce using rule 63
	'&&'           reduce using rule 63
	')'            reduce using rule 63
	'+'            shift, and enter state 62
	','            reduce using rule 63
	'-'            shift, and enter state 63
	';'            reduce using rule 63
	'<'            reduce using rule 63
	'<='           reduce using rule 63
	'=='           reduce using rule 63
	'>'            reduce using rule 63
	'>='           reduce using rule 63
	']'            reduce using rule 63
	'||'           reduce using rule 63

	AddOp          goto state 61

State 28

	Expr2 -> Expr2 . RelOp Expr3                        (rule 62)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 64)
	Expr1 -> Expr2 .                                    (rule 65)

	'!='           shift, and enter state 54
	'&&'           shift, and enter state 55
	')'            reduce using rule 65
	','            reduce using rule 65
	';'            reduce using rule 65
	'<'            shift, and enter state 56
	'<='           shift, and enter state 57
	'=='           shift, and enter state 58
	'>'            shift, and enter state 59
	'>='           shift, and enter state 60
	']'            reduce using rule 65
	'||'           reduce using rule 65

	RelOp          goto state 53

State 29

	Expr -> Expr1 . '||' Expr                           (rule 66)
	Expr -> Expr1 .                                     (rule 67)

	')'            reduce using rule 67
	','            reduce using rule 67
	';'            reduce using rule 67
	']'            reduce using rule 67
	'||'           shift, and enter state 52


State 30

	Item -> Ident '[' Expr . ']'                        (rule 17)

	']'            shift, and enter state 51


State 31

	Expr5 -> '!' . Expr6                                (rule 56)

	'('            shift, and enter state 32
	'false'        shift, and enter state 34
	'true'         shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 50

State 32

	Expr6 -> '(' . Expr ')'                             (rule 54)

	'!'            shift, and enter state 31
	'('            shift, and enter state 32
	'-'            shift, and enter state 33
	'false'        shift, and enter state 34
	'true'         shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 24
	Expr5          goto state 25
	Expr4          goto state 26
	Expr3          goto state 27
	Expr2          goto state 28
	Expr1          goto state 29
	Expr           goto state 49

State 33

	Expr5 -> '-' . Expr6                                (rule 55)

	'('            shift, and enter state 32
	'false'        shift, and enter state 34
	'true'         shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37

	Ident          goto state 21
	Integer        goto state 22
	String         goto state 23
	Expr6          goto state 48

State 34

	Expr6 -> 'false' .                                  (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	']'            reduce using rule 51
	'||'           reduce using rule 51


State 35

	Expr6 -> 'true' .                                   (rule 50)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'||'           reduce using rule 50


State 36

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'||'           reduce using rule 2


State 37

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	']'            reduce using rule 3
	'||'           reduce using rule 3


State 38

	Item -> Ident '=' Expr .                            (rule 16)

	','            reduce using rule 16
	';'            reduce using rule 16


State 39

	ListArg -> Arg .                                    (rule 13)
	ListArg -> Arg . ',' ListArg                        (rule 14)

	')'            reduce using rule 13
	','            shift, and enter state 47


State 40

	Decl -> Type Ident '(' ListArg . ')' Block          (rule 9)

	')'            shift, and enter state 46


State 41

	Arg -> Type . Ident                                 (rule 10)
	Arg -> Type . '&' Ident                             (rule 11)

	'&'            shift, and enter state 45
	L_Ident        shift, and enter state 2

	Ident          goto state 44

State 42

	Item -> Ident .                                     (rule 15)
	Item -> Ident . '=' Expr                            (rule 16)
	Item -> Ident . '[' Expr ']'                        (rule 17)

	','            reduce using rule 15
	';'            reduce using rule 15
	'='            shift, and enter state 19
	'['            shift, and enter state 20


State 43

	ListItem -> Item ',' ListItem .                     (rule 19)

	';'            reduce using rule 19


State 44

	Arg -> Type Ident .                                 (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 45

	Arg -> Type '&' . Ident                             (rule 11)

	L_Ident        shift, and enter state 2

	Ident          goto state 82

State 46

	Decl -> Type Ident '(' ListArg ')' . Block          (rule 9)

	'{'            shift, and enter state 81

	Block          goto state 80

State 47

	ListArg -> Arg ',' . ListArg                        (rule 14)

	')'            reduce using rule 12
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11

	Arg            goto state 39
	ListArg        goto state 79
	Type           goto state 41

State 48

	Expr5 -> '-' Expr6 .                                (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'||'           reduce using rule 55


State 49

	Expr6 -> '(' Expr . ')'                             (rule 54)

	')'            shift, and enter state 78


State 50

	Expr5 -> '!' Expr6 .                                (rule 56)
